Centrar botón iniciar compra en panel de oro

--- a/index.html
+++ b/index.html
@@ -1005,6 +1005,11 @@
             margin-top: 35px;
         }
 
+        .gold-order-panel #gold-order-open {
+            display: block;
+            margin: 0 auto;
+        }
+
         .gold-order-header {
             margin-bottom: 25px;
             text-align: center;
