--- a/index.html
+++ b/index.html
@@ -3798,16 +3798,6 @@
     const TIKTOK_LINK = "https://www.tiktok.com/@farmers.de.mmorpg?_r=1&_t=ZS-93X7c7XttZv";
     const LOGO_URL = "https://i.imgur.com/ynvAS9B.png";
     const SITE_URL = `${window.location.origin}/`;
-    const DATA_BUILD_VERSION = '2026.02.23.6';
-    const STORAGE_KEYS = [
-        'epicgoldshop_accounts',
-        'epicgoldshop_gold',
-        'epicgoldshop_gold_categories',
-        'epicgoldshop_references',
-        'epicgoldshop_settings',
-        'epicgoldshop_categories',
-        'epicgoldshop_game_servers'
-    ];
 
     // URLs de Imgur reales para ejemplos
     const IMGUR_IMAGE_URLS = {
@@ -4130,13 +4120,13 @@
         }));
     }
 
-    let accounts = JSON.parse(localStorage.getItem('epicgoldshop_accounts')) || sampleAccounts;
-    let gold = JSON.parse(localStorage.getItem('epicgoldshop_gold')) || sampleGold;
-    let goldCategories = JSON.parse(localStorage.getItem('epicgoldshop_gold_categories')) || sampleGoldCategories;
-    let references = JSON.parse(localStorage.getItem('epicgoldshop_references')) || sampleReferences;
-    let settings = JSON.parse(localStorage.getItem('epicgoldshop_settings')) || contactInfo;
-    let categories = JSON.parse(localStorage.getItem('epicgoldshop_categories')) || defaultCategories;
-    let gameServers = normalizeGameServers(JSON.parse(localStorage.getItem('epicgoldshop_game_servers'))) || [];
+    let accounts = [];
+    let gold = [];
+    let goldCategories = [];
+    let references = [];
+    let settings = { ...contactInfo };
+    let categories = [...defaultCategories];
+    let gameServers = [];
 
     // ============================================
     // SISTEMA DE IMÁGENES MEJORADO
@@ -4415,8 +4405,7 @@
     // ============================================
 
     function init() {
-        // Sincronizar datos locales con la versión del deploy y luego cargar datos
-        ensureCurrentDataVersion();
+        // Cargar datos
         loadData();
 
         // Renderizar contenido inicial
@@ -4509,14 +4498,6 @@
         goldCategories.forEach(category => add(category.game, category.server));
         gold.forEach(item => add(item.game, item.server));
         return Array.from(serverMap.values());
-    }
-
-    function ensureCurrentDataVersion() {
-        const storedVersion = localStorage.getItem('epicgoldshop_data_build_version');
-        if (storedVersion === DATA_BUILD_VERSION) return;
-
-        STORAGE_KEYS.forEach(key => localStorage.removeItem(key));
-        localStorage.setItem('epicgoldshop_data_build_version', DATA_BUILD_VERSION);
     }
 
     function loadData() {
