chore: make Vercel production deploy verifiable and disable stale HTML cache

--- a/index.html
+++ b/index.html
@@ -3759,6 +3759,7 @@
     const SITE_URL = "https://epicgoldshop.com/";
 
     // Supabase (compatibilidad con deploy actual y deploy anterior)
+    // SUPABASE_SYNC_VERSION: 2026-02-26-1
     // Orden de prioridad:
     // 1) window.__SUPABASE_* (deploy nuevo)
     // 2) window.SUPABASE_* (deploy anterior)
